<resources>
    <string name="app_name">MVVMProject</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="username">用户名:</string>
    <string name="password">密码:</string>
    <string name="repassword">确认密码:</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_repassword">请输入确认密码</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="repassword_empty">确认密码不能为空</string>
    <string name="not_account">还没有账号立即注册</string>
    <string name="home">首页</string>
    <string name="hot_search">热搜</string>
    <string name="setup">体系</string>
    <string name="official_account">公众号</string>
    <string name="mine">我的</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜你想搜</string>
    <string name="search_all">大家都在搜</string>
    <string name="common_web">常用网站</string>
</resources>